force-app/main/default/objects/Servico__c/Servico__c.object-meta.xml
<CustomObject>
    <label>Serviço</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serviços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>