force-app/main/default/objects/Servico__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>