force-app/main/default/objects/Servico__c/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordenador</label>
    <referenceTo>Pessoa__c</referenceTo>
    <relationshipLabel>Serviços (Coordenador)</relationshipLabel>
    <relationshipName>ServicosCoordenados</relationshipName>
    <type>Lookup</type>
</CustomField>