force-app/main/default/objects/Servico__c/fields/CustoPrevisto__c.field-meta.xml
<CustomField>
    <fullName>CustoPrevisto__c</fullName>
    <label>Custo Previsto (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>