force-app/main/default/objects/Servico__c/fields/CustoRealizado__c.field-meta.xml
<CustomField>
    <fullName>CustoRealizado__c</fullName>
    <label>Custo Realizado (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>