force-app/main/default/objects/Servico__c/fields/CustoVendido__c.field-meta.xml
<CustomField>
    <fullName>CustoVendido__c</fullName>
    <label>Custo Vendido (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>