force-app/main/default/objects/Servico__c/fields/DataFim__c.field-meta.xml
<CustomField>
    <fullName>DataFim__c</fullName>
    <label>Data fim (repactuada)</label>
    <type>Date</type>
</CustomField>