force-app/main/default/objects/Servico__c/fields/HorasMesAlocadas__c.field-meta.xml
<CustomField>
    <fullName>HorasMesAlocadas__c</fullName>
    <formula>NumeroHorasDia__c * 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas/mês alocadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>