force-app/main/default/objects/Servico__c/fields/IDContaAzul__c.field-meta.xml
<CustomField>
    <fullName>IDContaAzul__c</fullName>
    <description>ID único do cliente no ERP Conta Azul.</description>
    <externalId>true</externalId>
    <label>ID Conta Azul</label>
    <length>255</length>
    <type>Text</type>
</CustomField>