force-app/main/default/objects/Servico__c/fields/Lider__c.field-meta.xml
<CustomField>
    <fullName>Lider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Líder</label>
    <referenceTo>Pessoa__c</referenceTo>
    <relationshipLabel>Serviços</relationshipLabel>
    <relationshipName>Servicos</relationshipName>
    <type>Lookup</type>
</CustomField>