force-app/main/default/objects/Servico__c/fields/LiderTecnico__c.field-meta.xml
<CustomField>
    <fullName>LiderTecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Líder Técnico</label>
    <referenceTo>Pessoa__c</referenceTo>
    <relationshipLabel>Serviços (Líder Técnico)</relationshipLabel>
    <relationshipName>ServicosLiderados</relationshipName>
    <type>Lookup</type>
</CustomField>