force-app/main/default/objects/Servico__c/fields/MargemPrevista__c.field-meta.xml
<CustomField>
    <fullName>MargemPrevista__c</fullName>
    <label>Margem Prevista (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>