force-app/main/default/objects/Servico__c/fields/MargemRealizada__c.field-meta.xml
<CustomField>
    <fullName>MargemRealizada__c</fullName>
    <label>Margem Realizada (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>