force-app/main/default/objects/Servico__c/fields/MargemVendida__c.field-meta.xml
<CustomField>
    <fullName>MargemVendida__c</fullName>
    <label>Margem Vendida (%)</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>