force-app/main/default/objects/Servico__c/fields/NumeroAtividadesPeriodo__c.field-meta.xml
<CustomField>
    <fullName>NumeroAtividadesPeriodo__c</fullName>
    <label>Número de atividades no período</label>
    <summaryForeignKey>Atividade__c.Servico__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>