force-app/main/default/objects/Servico__c/fields/NumeroHorasDia__c.field-meta.xml
<CustomField>
    <fullName>NumeroHorasDia__c</fullName>
    <label>Número horas/dia</label>
    <summarizedField>Alocacao__c.HorasAlocadasNumero__c</summarizedField>
    <summaryFilterItems>
        <field>Alocacao__c.Status__c</field>
        <operation>equals</operation>
        <value>Ativa</value>
    </summaryFilterItems>
    <summaryForeignKey>Alocacao__c.Servico__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>