force-app/main/default/objects/Servico__c/fields/ReceitaPrevista__c.field-meta.xml
<CustomField>
    <fullName>ReceitaPrevista__c</fullName>
    <label>Receita Prevista (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>