force-app/main/default/objects/Servico__c/fields/ReceitaRealizada__c.field-meta.xml
<CustomField>
    <fullName>ReceitaRealizada__c</fullName>
    <label>Receita Realizada (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>