force-app/main/default/objects/Servico__c/fields/ReceitaVendida__c.field-meta.xml
<CustomField>
    <fullName>ReceitaVendida__c</fullName>
    <label>Receita Vendida (Total)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>