force-app/main/default/objects/Servico__c/fields/RequerRelatorioFaturamento__c.field-meta.xml
<CustomField>
    <fullName>RequerRelatorioFaturamento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requer Relatório p/ Faturamento</label>
    <type>Checkbox</type>
</CustomField>