force-app/main/default/objects/Servico__c/fields/SolicitaRelatorioHoras__c.field-meta.xml
<CustomField>
    <fullName>SolicitaRelatorioHoras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente solicita Relatório de Horas</label>
    <type>Checkbox</type>
</CustomField>