force-app/main/default/objects/Servico__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Calcula se o serviço está ativo baseando-se na data de início e fim em relação a hoje.</description>
    <formula>IF(AND(DataInicio__c &lt;= TODAY(), OR(ISBLANK(DataFim__c), DataFim__c &gt;= TODAY())), &quot;Ativo&quot;, &quot;Inativo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>