force-app/main/default/objects/Servico__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projeto</fullName>
            </value>
            <value>
                <fullName>Alocação</fullName>
            </value>
            <value>
                <fullName>Suporte</fullName>
            </value>
            <value>
                <fullName>Venda de software</fullName>
            </value>
            <value>
                <fullName>Investimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>