force-app/main/default/objects/Servico__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lider__c</columns>
    <columns>Conta__c</columns>
    <columns>DataInicio__c</columns>
    <columns>DataFimOriginal__c</columns>
    <columns>DataFim__c</columns>
    <columns>Tipo__c</columns>
    <columns>HorasMesAlocadas__c</columns>
    <columns>NumeroAtividadesPeriodo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>